--- a/SetupMSI/CustomDialogSet.wxs
+++ b/SetupMSI/CustomDialogSet.wxs
@@ -43,8 +43,8 @@
             <Publish Dialog="CustomWelcomeDlg" Control="Next" Event="NewDialog" Value="CustomVerifyReadyDlg">Installed AND PATCH</Publish>
             <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Property="_CancelDlgTitle" Value="!(loc.CancelDlg_Title)" Order="1">1</Publish>
             <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Property="_CancelDlgText" Value="!(loc.CancelDlgText)" Order="2">1</Publish>
-            <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Event="DoAction" Value="CancelDialog" Order="3">1</Publish>
-            <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Event="EndDialog" Value="Exit" Order="4">_UserWantsOut = 1</Publish>
+            <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Event="DoAction" Value="CancelDialog" Order="3">NETFRAMEWORK45</Publish>
+            <Publish Dialog="CustomWelcomeDlg" Control="Cancel" Event="EndDialog" Value="Exit" Order="4">_UserWantsOut = 1 OR NOT NETFRAMEWORK45</Publish>
 
             <Publish Dialog="CustomLicenseAgreementDlg" Control="Back" Event="NewDialog" Value="CustomWelcomeDlg">1</Publish>
             <Publish Dialog="CustomLicenseAgreementDlg" Control="Next" Property="REGISTRAR_DOMAIN" Value="exampleserver.mydomain.com" Order="1">REGISTRAR_DOMAIN = ""</Publish>
